2018.6/_sources/plugins/available/feature-table/rarefy.txt
rarefy: Rarefy table
====================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: feature-table:rarefy.bib
   :all:
   :keyprefix: feature-table:rarefy:
   :labelprefix: feature-table:rarefy:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table rarefy [OPTIONS]

     Subsample frequencies from all samples without replacement so that the sum
     of frequencies in each sample is equal to sampling-depth.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     The feature table to be rarefied.
                                     [required]
     --p-sampling-depth INTEGER RANGE
                                     The total frequency that each sample should
                                     be rarefied to. Samples where the sum of
                                     frequencies is less than the sampling depth
                                     will be not be included in the resulting
                                     table.  [required]
     --o-rarefied-table ARTIFACT PATH FeatureTable[Frequency]
                                     The resulting rarefied feature table.
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Rarefy table

   Subsample frequencies from all samples without replacement so that the sum
   of frequencies in each sample is equal to sampling-depth.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table to be rarefied.
   sampling_depth : Int % Range(1, None)
       The total frequency that each sample should be rarefied to. Samples
       where the sum of frequencies is less than the sampling depth will be
       not be included in the resulting table.

   Returns
   -------
   rarefied_table : FeatureTable[Frequency]
       The resulting rarefied feature table.</pre>
       </div>
     </div>
   </div>